<resources>
    <string name="app_name">Bumi Tani</string>
    <string name="lainnya_btnTxt">Lainnya</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>

    <string name="productImg">Foto Produk</string>
    <string name="chooseImg">Pilih Gambar</string>
    <string name="productTxt">Nama Produk</string>
    <string name="descTxt">Deskripsi Produk</string>
    <string name="productPrice">Harga Produk</string>
    <string name="btnCreate">Unggah Produk</string>
    <string name="Home">Home</string>
    <string name="Forum">Forum</string>
    <string name="Scan">Scan</string>
    <string name="Cart">Marketplace</string>
    <string name="Profil">Profil</string>

    <string-array name="productCategory">
        <item>Cabai</item>
        <item>Tomat</item>
        <item>Bawang</item>
        <item>Sayur</item>
        <item>Buah</item>
    </string-array>


</resources>